# nokhwa

./: .gitignore  CHANGELOG.md  Cargo.toml  Jenkinsfile  README.md  UPDATE_CHECKLIST.md  build.rs  devenv.nix  make-npm.sh  publish.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  examples.yml
.run/: Clippy All.run.xml  Clippy Main Apple.run.xml  Clippy Main Windows.run.xml  Clippy Main.run.xml  JSCam.run.xml
examples/: README.md
examples/capture/: .gitignore  Cargo.toml  Info.plist  Makefile  README.md
examples/capture/example-capture/example-capture/: Info.plist  example_capture.entitlements  main.c  main.swift
examples/capture/example-capture/example-capture.xcodeproj/: project.pbxproj
examples/capture/example-capture/example-capture.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/capture/example-capture/example-capture.xcodeproj/project.xcworkspace/xcuserdata/pengg.xcuserdatad/: UserInterfaceState.xcuserstate
examples/capture/example-capture/example-capture.xcodeproj/xcshareddata/xcschemes/: example-capture.xcscheme
examples/capture/example-capture/example-capture.xcodeproj/xcuserdata/pengg.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/capture/example-capture/rustpack-capture/: .gitignore
examples/capture/example-capture/rustpack-capture/rustpack-capture.xcodeproj/: project.pbxproj
examples/capture/example-capture/rustpack-capture/rustpack-capture.xcodeproj/xcuserdata/pengg.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/capture/src/: main.rs
examples/decoder_test/: Cargo.toml  cchlop.nv12
examples/decoder_test/src/: main.rs
examples/example-nokhwawasm/: Cargo.toml
examples/jscam/: .gitignore  package.json  setup.sh
examples/jscam/frontend/: index.html
examples/jscam/src/: index.html  index.js
examples/jscapture/: index.html  index.js  package.json
examples/setting/: Cargo.toml
examples/setting/src/: main.rs
examples/threaded-capture/: Cargo.toml
examples/threaded-capture/src/: main.rs
nokhwa-bindings-linux/: Cargo.toml
nokhwa-bindings-linux/src/: lib.rs
nokhwa-bindings-macos/: Cargo.toml  README.md  build.rs
nokhwa-bindings-macos/src/: lib.rs
nokhwa-bindings-windows/: Cargo.toml  README.md  build.rs  wrapper.h
nokhwa-bindings-windows/NokhwaBindingsWindowsCXX/: NokhwaBindingsWindowsCXX.sln
nokhwa-bindings-windows/NokhwaBindingsWindowsCXX/NokhwaBindingsWindowsCXX/: NokhwaBindingsWindowsCXX.cpp  NokhwaBindingsWindowsCXX.h  NokhwaBindingsWindowsCXX.vcxproj  NokhwaBindingsWindowsCXX.vcxproj.filters
nokhwa-bindings-windows/NokhwaBindingsWindowsCXX/NokhwaBindingsWindowsCXX/Debug/NokhwaBi.78800d0d.tlog/: NokhwaBindingsWindowsCXX.lastbuildstate
nokhwa-bindings-windows/src/: lib.rs  traits.rs
nokhwa-core/: Cargo.toml
nokhwa-core/src/: buffer.rs  capture.rs  controls.rs  decoder.rs  error.rs  format_filter.rs  format_request.rs  frame_format.rs  lib.rs  pixel_format.rs  ranges.rs  traits.rs  types.rs  utils.rs
nokhwa-core/src/decoders/: general.rs  mod.rs
nokhwajs/: README.md  nokhwa.d.ts  nokhwa.js  nokhwa_bg.js  nokhwa_bg.wasm  nokhwa_bg.wasm.d.ts  package.json
src/: buffer.rs  camera.rs  camera_traits.rs  error.rs  init.rs  js_camera.rs  lib.rs  macros.rs  network_camera.rs  pixel_format.rs  query.rs  threaded.rs  threaded_camera.rs  utils.rs
src/backends/: mod.rs
src/backends/capture/: avfoundation.rs  browser_backend.rs  browser_camera.rs  gst_backend.rs  mod.rs  msmf.rs  msmf_backend.rs  network_camera.rs  opencv_backend.rs  uvc.rs  uvc_backend.rs  v4l2.rs  v4l2_backend.rs  v4l_capture.rs
src/decoders/: mjpeg.rs  mod.rs  nv12.rs  yuyv.rs
