[package]
name = "nokhwa-bindings-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.nokhwa-core]
version = "0.1.0-rc.2"
path = "../nokhwa-core"

[target.'cfg(target_os="linux")'.dependencies]
v4l = "0.13"
v4l2-sys-mit = "0.2"