[package]
name = "nokhwa-bindings-macos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2.7"
cocoa-foundation = "0.1.0"
thiserror = "1.0.29"
lazy_static = "1.4.0"
core-media-sys = "0.1.2"

[build-dependencies]
bindgen = "0.59.1"