[package]
name = "nokhwa-bindings-macos"
version = "0.2.0"
edition = "2018"
authors = ["l1npengtul"]
license = "Apache-2.0"
repository = "https://github.com/l1npengtul/nokhwa"
description = "The AVFoundation bindings crate for `nokhwa`"
keywords = ["avfoundation", "macos", "capture", "webcam"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10"
once_cell = "1.14"

[dependencies.nokhwa-core]
version = "0.1"
path = "../nokhwa-core"

[target.'cfg(any(target_os="windows",target_os="windows"))'.dependencies]
core-media-sys = "0.1"
cocoa-foundation = "0.1"
objc = { version = "0.2", features = ["exception"] }
block = "0.1"
