[package]
name = "nokhwa-bindings-windows"
version = "0.3.2"
authors = ["l1npengtul"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/l1npengtul/nokhwa"
description = "The Windows Media Foundation bindings crate for `nokhwa`"
keywords = ["media-foundation", "windows", "capture", "webcam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.26"

[target.'cfg(all(target_os = "windows", windows))'.dependencies]
windows = "0.21.1"
lazy_static = "1.4.0"

[target.'cfg(all(target_os = "windows", windows))'.build-dependencies.windows]
version = "0.21.1"
