[package]
name = "nokhwa-bindings-windows"
version = "0.3.4"
authors = ["l1npengtul"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/l1npengtul/nokhwa"
description = "The Windows Media Foundation bindings crate for `nokhwa`"
keywords = ["media-foundation", "windows", "capture", "webcam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1.0"

[target.'cfg(all(target_os = "windows", windows))'.dependencies]
lazy_static = "1.4.0"

[target.'cfg(all(target_os = "windows", windows))'.dependencies.windows]
version = "0.37.0"
features = ["alloc", "Win32_Media_MediaFoundation", "Win32_System_Com", "Win32_Foundation", "Win32_Media_DirectShow"]

