[package]
name = "nokhwa-bindings-windows"
version = "0.4.0-rc.2"
authors = ["l1npengtul"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/l1npengtul/nokhwa"
description = "The Windows Media Foundation bindings crate for `nokhwa`"
keywords = ["media-foundation", "windows", "capture", "webcam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dependencies.nokhwa-core]
version = "0.1.0-rc.2"
path = "../nokhwa-core"

[dependencies.windows]
version = "0.43.0"
features = ["Win32_Media_MediaFoundation", "Win32_System_Com", "Win32_Foundation", "Win32_Media_DirectShow", "Win32_Media", "Win32", "Win32_Media_KernelStreaming"]
