[package]
name = "nokhwa-core"
version = "0.2.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
edition = "2021"
description = "Core type definitions for nokhwa"
keywords = ["camera", "webcam", "capture", "cross-platform"]
categories = ["api-bindings", "multimedia", "web-programming"]
license = "Apache-2.0"
repository = "https://github.com/l1npengtul/nokhwa"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serialize = ["serde"]
wgpu-types = ["wgpu"]
opencv-mat = ["opencv"]
docs-features = ["serialize", "wgpu-types"]
async = ["async-trait"]
test-fail-warnings = []


[dependencies]
thiserror = "1.0"
bytes = "1.3"
paste = "1.0"

[dependencies.image]
version = "0.24"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.wgpu]
version = "0.17"
optional = true

[dependencies.opencv]
version = "0.84"
default-features = false
optional = true

[dependencies.mozjpeg]
version = "0.9"
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[package.metadata.docs.rs]
features = ["docs-features"]
