[package]
name = "nokhwa-core"
version = "0.2.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
edition = "2021"
description = "Core type definitions for nokhwa"
keywords = ["camera", "webcam", "capture", "cross-platform"]
categories = ["api-bindings", "multimedia", "web-programming"]
license = "Apache-2.0"
repository = "https://github.com/l1npengtul/nokhwa"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serialize = ["serde"]
wgpu-types = ["wgpu"]
opencv-mat = ["opencv"]
docs-features = ["serialize", "wgpu-types"]
conversions = ["dcv-color-primitives", "yuvutils-rs", "mozjpeg"]
async = ["async-trait"]
test-fail-warnings = []


[dependencies]
thiserror = "1.0"
bytes = "1.3"
paste = "1.0"

[dependencies.image]
version = "0.25"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.wgpu]
version = "22"
optional = true

[dependencies.opencv]
version = "0.92"
default-features = false
optional = true

[dependencies.mozjpeg]
version = "0.10"
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.dcv-color-primitives]
version = "0.6"
optional = true

[dependencies.yuvutils-rs]
version = "0.3"
optional = true

[package.metadata.docs.rs]
features = ["docs-features"]
