[package]
name = "nokhwactl"
version = "0.10.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>", "The Nokhwa Contributors"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["nokhwa/default", "native"]
native = ["nokhwa/input-native"]

[dependencies]
ggez = "0.8.1"
flume = "0.10.14"
once_cell = "1.16.0"
image = "0.24.4"
color-eyre = "0.6.2"

[dependencies.clap]
version = "4.0.20"
features = ["derive"]

# Use these as you need
[dependencies.nokhwa]
path = "../../../nokhwa"
features = ["output-threaded"]
