[package]
name = "setting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.image]
version = "0.23.14"
default-features = false

[dependencies.nokhwa]
path = "../../../nokhwa"
# EDIT THIS!
features = ["input-v4l"]
