[package]
name = "threaded-capture"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.image]
version = "0.23.14"
default-features = false

[dependencies.nokhwa]
path = "../../../nokhwa"
# EDIT THIS!
features = ["input-native", "output-threaded"]
